--- a/assets/themes/twitter/css/my_custom_css.css
+++ b/assets/themes/twitter/css/my_custom_css.css
@@ -25,7 +25,7 @@ a img {
 }
 
 a:hover img {
-    color: darkslateblue;
+    color: slateblue;
     background-color: #e3e4fa;
     text-decoration: none;
     border: solid 2px #e3e4fa;
@@ -58,7 +58,7 @@ td.right {
 
 
 h1, h2, h3, h4 {
-    color: darkslateblue;
+    color: slateblue;
 }
 
 .danger {
