--- a/assets/themes/twitter/css/my_custom_css.css
+++ b/assets/themes/twitter/css/my_custom_css.css
@@ -91,11 +91,11 @@ h1, h2, h3, h4 {
     padding-left:20px;
     padding-right:20px;
     background-color:#fafafa;
-    background-image:-moz-linear-gradient(top, #edffff, #e3ffff);
-    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#edffff), to(#f2f2f2));
-    background-image:-webkit-linear-gradient(top, #edffff, #8adeff);
-    background-image:-o-linear-gradient(top, #edffff, #8adeff);
-    background-image:linear-gradient(to bottom, #edffff, #eadeff);
+    background-image:-moz-linear-gradient(top, #80E6FF, #80E6FF);
+    background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#80E6FF), to(#80E6FF));
+    background-image:-webkit-linear-gradient(top, #80E6FF, #80E6FF);
+    background-image:-o-linear-gradient(top, #80E6FF, #80E6FF);
+    background-image:linear-gradient(to bottom, #80E6FF, #80E6FF);
     background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff6666', endColorstr='#fff2f2f2', GradientType=0);
     border:1px solid #30C23D;
     -webkit-border-radius:4px;
