--- a/assets/themes/twitter/css/my_custom_css.css
+++ b/assets/themes/twitter/css/my_custom_css.css
@@ -7,15 +7,15 @@ code {
 }
 
 a code {
-    color: #LightSkyBlue;
+    color: #BlueViolet;
 }
 
 a {
-    color: #LightSkyBlue;
+    color: #BlueViolet;
 }
 
 a:hover {
-    color: LightSkyBlue;
+    color: BlueViolet;
     background-color: none;
     text-decoration: none;
 }
@@ -25,7 +25,7 @@ a img {
 }
 
 a:hover img {
-    color: LightSkyBlue;
+    color: BlueViolet;
     background-color: #e3e4fa;
     text-decoration: none;
     border: solid 2px #e3e4fa;
@@ -58,7 +58,7 @@ td.right {
 
 
 h1, h2, h3, h4 {
-    color: LightSkyBlue;
+    color: BlueViolet;
 }
 
 .danger {
