--- a/assets/themes/twitter/css/my_custom_css.css
+++ b/assets/themes/twitter/css/my_custom_css.css
@@ -7,15 +7,15 @@ code {
 }
 
 a code {
-    color: #BlueViolet;
+    color: #DarkSlateBlue;
 }
 
 a {
-    color: #BlueViolet;
+    color: #DarkSlateBlue;
 }
 
 a:hover {
-    color: BlueViolet;
+    color: DarkSlateBlue;
     background-color: none;
     text-decoration: none;
 }
@@ -25,7 +25,7 @@ a img {
 }
 
 a:hover img {
-    color: BlueViolet;
+    color: DarkSlateBlue;
     background-color: #e3e4fa;
     text-decoration: none;
     border: solid 2px #e3e4fa;
