--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -37,6 +37,7 @@
           <ul class="nav">
               <li><a href="{{ BASE_PATH }}/assets/CV.pdf">CV</a></li>
               <li><a href="{{ BASE_PATH }}/pages/research.html">Research</a></li>
+		<li><a href="/pages/dissemination.html">Dissemination</a></li>
           </ul>
         </div>
       </div>
